--- a/FastMoq.Tests.Blazor/Pages/Counter.razor
+++ b/FastMoq.Tests.Blazor/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@using System.IO.Abstractions
 
 <PageTitle>Counter</PageTitle>
 
@@ -9,6 +10,9 @@
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
+    [Inject]
+    public IFileSystem FileSystem { get; set; }
+
     internal int currentCount = 0;
 
     private void IncrementCount()
