--- a/FastMoq.Tests.Blazor/Pages/Counter.razor
+++ b/FastMoq.Tests.Blazor/Pages/Counter.razor
@@ -11,7 +11,7 @@
 
 @code {
     [Inject]
-    public IFileSystem FileSystem { get; set; }
+    public IFileSystem FileSystem { get; set; } // Added for testing only.
 
     internal int currentCount = 0;
 
