--- a/FastMoq.Tests.Blazor/Pages/Index.razor
+++ b/FastMoq.Tests.Blazor/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-
+@inject NavigationManager NavManager
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
@@ -7,3 +7,4 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+<button @onclick='() => NavManager.NavigateTo("counter")'>Click Test</button>
