--- a/FastMoq.Tests.Blazor/Shared/NavMenu.razor
+++ b/FastMoq.Tests.Blazor/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink id="counterLink" class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
