--- a/FastMoq.Tests.Blazor/Pages/Index.razor
+++ b/FastMoq.Tests.Blazor/Pages/Index.razor
@@ -7,5 +7,5 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
-<button @onclick='() => NavManager.NavigateTo("counter")'>Click Test</button>
+<button id="testbutton" @onclick='() => NavManager.NavigateTo("counter")'>Click Test</button>
 <FetchData></FetchData>
