testing and cleanup

--- a/FastMoq.Tests.Blazor/Pages/Counter.razor
+++ b/FastMoq.Tests.Blazor/Pages/Counter.razor
@@ -15,8 +15,5 @@
 
     internal int currentCount = 0;
 
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
+    private void IncrementCount() => currentCount++;
 }
